--- a/src/styles/Auth.module.scss
+++ b/src/styles/Auth.module.scss
@@ -7,6 +7,7 @@
     color: $dark_color;
     position: absolute;
     .login{
+        position: relative;
         margin: 10vh auto 0 auto;
         display: flex;
         flex-direction: column;
@@ -17,7 +18,7 @@
         border: $dark_color solid 2px;
         border-radius: 15px;
         padding: 50px 0;
-        z-index: 1;
+        z-index: 5;
         .loginHeader{
             font-size: 22px;
             font-weight: 800;
@@ -40,6 +41,31 @@
             .reg-btn{
                 height: 40px;
                 padding: 5px 15px;
+                font-size: 15px;
+                font-weight: 600;
+                background-color: $dark_green_color;
+                color: $light_color;
+                border: 2px solid rgba($color: #000000, $alpha: 0.0);
+                border-radius: 8px;
+                & > * {
+                    text-decoration: none;
+                    color: $light_color;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                }
+                &:hover > * {
+                    color: $dark_color;
+                    transition: all 0.3s;
+                }
+                &:hover{
+                    color: $dark_color;
+                    background-color: $light_color;
+                    border: 2px solid $dark_color;
+                    transition: all 0.3s;
+                }
             }
         }
     }
