--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 80%;
+    z-index: 10;
     .formField{
         display: flex;
         flex-direction: column;
@@ -35,5 +36,30 @@
         width: auto;
         padding: 5px 50px;
         cursor: pointer;
+        font-size: 15px;
+        font-weight: 600;
+        background-color: $dark_green_color;
+        color: $light_color;
+        border: 2px solid rgba($color: #000000, $alpha: 0.0);
+        border-radius: 8px;
+        & > * {
+            text-decoration: none;
+            color: $light_color;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+        &:hover > * {
+            color: $dark_color;
+            transition: all 0.3s;
+        }
+        &:hover{
+            color: $dark_color;
+            background-color: $light_color;
+            border: 2px solid $dark_color;
+            transition: all 0.3s;
+        }
     }
 }
