--- a/src/styles/Workspace/MainMenu.module.scss
+++ b/src/styles/Workspace/MainMenu.module.scss
@@ -3,7 +3,7 @@
     border: none;
     min-height: 50px;
     vertical-align: middle;
-    &:hover{
+   /* &:hover{
         background-color: rgb(124, 203, 255);
-    }
+    }*/
 }
